@@ -4,18 +4,14 @@ Hash: SHA256
 DIST zathura-pdf-mupdf-0.2.6.tar.gz 9094 SHA256 5df94b6f906008b5f3bca770a552da6d2917d6b8d3e4b3049cb7001302041b20 SHA512 5dda347055a0286229e63b7de02bd58314590bfe0edd25d793169f30061083dbf7915669657c7f717c6a3b141b23acd4481dbdb81fa69e399385b2c3eff4272f WHIRLPOOL 6ea732523c0fe4f1324a690a4a7120da5d422f976358270ea096516fb2470b61f1efd3f3be0c1735320e3b9d5de5f0672ee69fd48c6b72135ae686908f1d089e
 DIST zathura-pdf-mupdf-0.2.7.tar.gz 9357 SHA256 b1343f35940ebcf463b868b557be4eaba7d61884d6ff3ad3d7c7c272e69c253f SHA512 0c0b5ab13cce85f7328fa5ba967ceba926793d7e19fc8e41875fe98b5878292d395edab71e5df86bc6fe86ad111031510362303b7f08a8375731e41a73237a82 WHIRLPOOL a46915fa33f563adb18d462c58a516fd76f69ccdc30b05605b566215acaf47776d36f285019e68bd9d9b4e6c91616a6a0f130478d7ef1668db9a670bdd164b92
 EBUILD zathura-pdf-mupdf-0.2.6.ebuild 1243 SHA256 6ee897e6d49ac48e74d84b0b7e21a28966a73ea4ee2e14388061688b47770135 SHA512 b55e662c7e6ec001e1b19bf795cbb61f54abc1252edd4f2a50aac65d41262c6cda485cd148089c2fe04336285f077d98a8a964f7cdce921230358159ec826d54 WHIRLPOOL 09876ce5dee418016eb9d0b5bb471fafa6904f8682baef7debf58800718afe637e8c12418ab3437b5a0aa05cb3c2d8298c11136b2204b3644e2a2a455b7c4611
-EBUILD zathura-pdf-mupdf-0.2.7.ebuild 1241 SHA256 431409bdc39e687985597d438bec72536382f3fdc2b7575c21d422798aeee9e3 SHA512 1e810de3a760bd7b1a2327834a6d2900355a83fc49f17a3794874c9ceedce4d2a394f7421ac6107637664ba539c1b72e3315eb3260d29c223e7b26799149f4f6 WHIRLPOOL 1c3ed82984a19165ea2c767f424f77d8575b76b9faac6c1ed2bcd4d13f7987368c4a1c5236e066553c90074d0eb6d0eaa5eaf6e6ea12c41d87f58cda9b1a1884
+EBUILD zathura-pdf-mupdf-0.2.7.ebuild 1258 SHA256 6579085e42c5bf7eb8a3cada0845e5f69b615f4f68282e837c57f3c63172d614 SHA512 6b652ffe4f39af74ac79219e5ad61023474371610be49f04cc4222fb8ff7becdecc70c49c22ec22e968a1f554f9eb74b12d3f1c0b3cdfbf7ae1c61b69633f061 WHIRLPOOL a77a5c7d18e19956d6037733e25ee1d033f7468312a902ff2f8875f1c874ad881359855d909525ea03da4f797f3790d2c6c1060555efe23fe9f4e8ba1889f766
 EBUILD zathura-pdf-mupdf-9999.ebuild 1241 SHA256 30889b7688a97ec815ed8e4c56de57a9bf5498c3d77d6cf5a1ab7457197f1236 SHA512 a0a42675bcc4acc984c3cc57dfeb438b432916fd4c8eba7bb34e4e4f3141d4041c7964186a148b6e1755fd1709bc4b1590f2115f025b12e581a92f2a76ace15e WHIRLPOOL e1e576a7de1e35758e729c99e9f14d1f589100e0dce8cbd600667cb30debfd6d1ae6ab0524dc1e3fcb2576a53ca53b04cdaa1b84f8908f67447168ac00972c3a
-MISC ChangeLog 3359 SHA256 4e86f01a9eb481772ac5272acfa64c2b6a272dbd5d07e83b944aa02435b5c18e SHA512 3e7acc237b92dc5640ec5b069041632644587d4acb40da94d4581e017a7b590f007790fdae7df6809f4420dfa499bc00bb28e11cdf2680a9d0bea5980917de2b WHIRLPOOL 52d4e3e9d8c2fa4819aa2bc0afc6a3b057ef473d0b2d6f11a628c9b83a4677860f0458b123b9d1b593b776bcf9659be61d2792247cf6a8f8eea02c179851d307
+MISC ChangeLog 3458 SHA256 4f09847a0638fa3caee9f37eb510a34782457d89e1f5984489112e45fcc27e19 SHA512 28834b495d42ac70797486c1f15304a006677dbdcf480dccad58221d4f7d1c7c08f4f978bb912f6df189baa0ce2b0ad0930f649364c6ed7f15a5a338cdaf4336 WHIRLPOOL e243393ec9e1e1727a254fc4078b0fe5f7366b81ce696da592fdf2f654ee8e4654ee517b2bb77e619ff9326214b6c6ce23a7b20bf53e19014276d741eca7b22d
 MISC metadata.xml 792 SHA256 34611a880defaaaa12f93fb91186e6b302733dac7b65d1e107e55536b916cd45 SHA512 cb3b1a3727d5d43dd5cadf975ead8a37931ee4809879af28ada6d8d2a0d6a71243ec1fe17c1c4f3f20580ce24e13b750007a2144c8bb184eb726ad0877e85198 WHIRLPOOL c4b9034f5d60c8a1f67fe5a53f8fa36c3ffd8c2776eff655e0a62065bc3e33394f765e25fa4a081aba06b61f56abbf4e652796955711b119d0fc5c902965ab4a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUSpppAAoJEEdUh39IaPFNTToH/j9DyPY/fY2ghhUZb6eo9jkH
-Z6S8HR4pN8iOHg3aemistaF9D7/PENxAxUGLlB0oeDqJKmJ7fb4VVQvdsZmRzFzv
-hWzdSkFEbcDEM+UeuaE019XjjGMdh1adST7VtB6aKVx4cffTTFzk8cSnZd+7JUBs
-F9Rnh3zinI1I5UyO4I+HnilkvpNmZUayQ65Lv4tDdswizl168Avq1MXlZSKXqONB
-4YPnKt1gG0AYvgEUqjaDMW/KZmmN45aIVQ6nh0BVveJMKFbeCjbXaEgoONu7Cp3f
-vjOh5s+AU6dDTRfW+g4Zh5pdYxIt6KKDRxzijEV3vSbcSyeJ+7PWvRGubWTwy6A=
-=x1AP
+iF4EAREIAAYFAlUxJ/EACgkQknrdDGLu8JBSyAD+M1yjR4JcDRFGqG/9kbwI69S/
+IYRzSThyciCh2HhlnLwA/iT3HwKktC+rWooiV/e+V4LHyfdd0D/dlEDqPnMAfSu2
+=Llgz
 -----END PGP SIGNATURE-----
