@@ -6,6 +6,6 @@ HOMEPAGE=http://mupdf.com/
 IUSE=X vanilla curl openssl static static-libs
 LICENSE=AGPL-3
 RDEPEND=dev-libs/openssl[static-libs?] media-libs/freetype:2[static-libs?] media-libs/jbig2dec[static-libs?] media-libs/openjpeg:2[static-libs?] net-misc/curl[static-libs?] virtual/jpeg[static-libs?] X? ( x11-libs/libX11[static-libs?] x11-libs/libXext[static-libs?] )
-SLOT=0/1.6
+SLOT=0/1.7
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	git-2	e28f0d8a9b321431b1e699782851b827	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=1f268fd74f08e34731a2949d46ede0b7
+_md5_=938f0742b86076af7df9237754acd674
