@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile install setup
-DEPEND=!app-text/zathura-pdf-poppler >=app-text/mupdf-1.3:= >=app-text/zathura-0.3.1 media-libs/jbig2dec:= media-libs/openjpeg:2= virtual/jpeg:0 x11-libs/cairo:= virtual/pkgconfig
+DEPEND=!app-text/zathura-pdf-poppler >=app-text/mupdf-1.3:= <app-text/mupdf-1.7:= >=app-text/zathura-0.3.1 media-libs/jbig2dec:= media-libs/openjpeg:2= virtual/jpeg:0 x11-libs/cairo:= virtual/pkgconfig
 DESCRIPTION=PDF plug-in for zathura
 EAPI=5
 HOMEPAGE=http://pwmt.org/projects/zathura/
 KEYWORDS=~amd64 ~x86
 LICENSE=ZLIB
-RDEPEND=!app-text/zathura-pdf-poppler >=app-text/mupdf-1.3:= >=app-text/zathura-0.3.1 media-libs/jbig2dec:= media-libs/openjpeg:2= virtual/jpeg:0 x11-libs/cairo:=
+RDEPEND=!app-text/zathura-pdf-poppler >=app-text/mupdf-1.3:= <app-text/mupdf-1.7:= >=app-text/zathura-0.3.1 media-libs/jbig2dec:= media-libs/openjpeg:2= virtual/jpeg:0 x11-libs/cairo:=
 SLOT=0
 SRC_URI=http://pwmt.org/projects/zathura/plugins/download/zathura-pdf-mupdf-0.2.7.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=25b4ec686db1873b56d290abb55118f2
+_md5_=a34999c3f310d52fc8b0e5262d6400ab
