@@ -1,6 +1,9 @@
 # ChangeLog for app-text/zathura-pdf-mupdf
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/zathura-pdf-mupdf/ChangeLog,v 1.17 2014/10/24 18:29:07 ssuominen Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/zathura-pdf-mupdf/ChangeLog,v 1.18 2015/04/17 15:34:08 xmw Exp $
+
+  17 Apr 2015; Michael Weber <xmw@gentoo.org> zathura-pdf-mupdf-0.2.7.ebuild:
+  Adjust mupdf dependency
 
 *zathura-pdf-mupdf-0.2.7 (24 Oct 2014)
 
