@@ -1,6 +1,12 @@
 # ChangeLog for app-text/mupdf
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/mupdf/ChangeLog,v 1.115 2015/02/26 13:53:42 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/mupdf/ChangeLog,v 1.116 2015/04/17 15:37:50 xmw Exp $
+
+*mupdf-1.7 (17 Apr 2015)
+
+  17 Apr 2015; Michael Weber <xmw@gentoo.org> +mupdf-1.7.ebuild,
+  mupdf-9999.ebuild:
+  Version bump
 
 *mupdf-1.6 (26 Feb 2015)
 
